<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UpdateProfile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/update_profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/main_color"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical">

            <ImageButton
                android:id="@+id/update_profile_back_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/transparent_color"
                android:scaleType="centerInside"
                android:src="@drawable/baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />


            <TextView
                android:id="@+id/QliQ_profile_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/update_profile"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/update_profile_back_btn"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/update_profile_pic_iv"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:elevation="20dp"
        android:src="@drawable/baseline_photo_size_select_actual_24"
        app:civ_border_color="#000000"
        app:civ_border_width="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/space_mono_regular"
        android:text="@string/set_profile_picture"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/update_profile_pic_iv"
        app:layout_constraintStart_toStartOf="@+id/update_profile_pic_iv"
        app:layout_constraintTop_toBottomOf="@+id/update_profile_pic_iv" />

    <EditText
        android:id="@+id/update_username_edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="12"
        android:fontFamily="@font/space_mono_regular"
        android:hint="@string/username"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/update_profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/black"
        android:ems="8"
        android:fontFamily="@font/space_mono_regular"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_username_edt" />

    <View
        android:id="@+id/loadingbg_update_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/loading_back"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar_update_profile"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateOnly="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/loadingbg_update_profile"
        app:layout_constraintEnd_toEndOf="@+id/loadingbg_update_profile"
        app:layout_constraintStart_toStartOf="@+id/loadingbg_update_profile"
        app:layout_constraintTop_toTopOf="@+id/loadingbg_update_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>